--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     margin: 5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4b2438;
-    font-weight: 700;
+/*     font-weight: 700; */
 }
 #btns-fram{
     margin-top: 50px;
