--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ body{
     margin: 5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4b2438;
+    padding-right: 10px;
+
 /*     font-weight: 700; */
 }
 #btns-fram{
