--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body{
     margin:2px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4b2438;
-    padding-right: 10px;
+/*     padding-right:10px; */
     font-stretch: condensed;
 }
 #btns-fram{
