--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ body{
 }
 .tm{
     font-size: 30px;
-    margin:2px;
+    margin:5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4b2438;
-/*     padding-right:10px; */
+    padding-right:10px;
     font-stretch: condensed;
 }
 #btns-fram{
