--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body{
 }
 #time-screen{
     display: flex;
-    background-color: white;
     width:200px;
     border-radius: 8px;
     background-image: linear-gradient(gray,pink);
@@ -108,7 +107,14 @@ p{
         width:50%;
         margin-top: -25px;
     };
-    
+       #time-screen{
+        display: flex;
+        width:150px;
+        border-radius: 8px;
+        background-image: linear-gradient(gray,pink);
+        padding: 25px;
+        align-self: center;
+    }
     #btns-fram{
         width:60%;
     }
