--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body{
 #time-screen{
     display: flex;
     width:200px
+    padding:35px
     border-radius: 8px;
     background-image: linear-gradient(gray,pink);
     align-self: center;
