--- a/style.css
+++ b/style.css
@@ -37,10 +37,9 @@ body{
 }
 .tm{
     font-size: 30px;
-    margin:5px;
+    margin-left:15px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4b2438;
-    padding-right:10px;
     font-stretch: condensed;
 }
 #btns-fram{
