--- a/style.css
+++ b/style.css
@@ -106,6 +106,13 @@ p{
         width:50%;
         margin-top: -25px;
     };
+    .tm{
+    font-size: 30px;
+    margin-left:8px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #4b2438;
+    font-stretch: condensed;
+}
     #btns-fram{
         width:60%;
     }
