--- a/style.css
+++ b/style.css
@@ -102,6 +102,10 @@ p{
     #fram{
         width:40%;
     }
+    #time-screen{
+    padding:10px;
+   
+}
     #btns-fram{
         margin-top:35px;
         width:130%;
