--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@ p{
     padding:30px;
    
 }
+.tm{
+    font-size: 30px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #4b2438;
+    margin:8px;
+}
     #btns-fram{
         margin-top:35px;
         width:130%;
