--- a/style.css
+++ b/style.css
@@ -98,33 +98,24 @@ p{
     }
 
     #title {
-        font-size: 25px;
+        font-size: 35px;
     }
 
     #fram {
-        width: 80%;
-        padding: 20px;
+        width: 55%;
     }
 
     #btns-fram {
-        width: 100%;
-        justify-content: space-around;
+        width: 95%;
+        padding:8px;
     }
-
     .btn {
-        width: 30%;
-        margin: 5px;
+        width: 32%;
+        margin: 7px;
     }
 
-    #time-screen {
-        width: 80px; 
-        padding: 10px; 
-    }
-
-    .tm {
-        font-size: 18px; 
-    }
-}/* ------------------------------animation for titel------------------ */
+}
+/* ------------------------------animation for titel------------------ */
 @keyframes fadein{
     10%{
         opacity: 0;
