--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 #time-screen{
     display: flex;
-    justify-content: center;
+/*     justify-content: center; */
     border-radius: 8px;
     background-image: linear-gradient(gray,pink);
     width:200px;
